Fix cart block on IE7.
Reviewed-on: https://code.drupalcommerce.org/56
Tested-by: Jenkins <jenkins@commerceguys.com>

--- a/themes/commerce_kickstart_theme/css/ie-lte-7.css
+++ b/themes/commerce_kickstart_theme/css/ie-lte-7.css
@@ -31,8 +31,8 @@
 }
 .block-shopping-cart-block .content {
   float: left;
-  padding-left: 40px;
-  width: 200px;
+  padding-left: 30px;
+  width: 210px;
 }
 .block-shopping-cart-block .content .view-shopping-cart .view-content,
 .block-shopping-cart-block .content .view-shopping-cart .view-footer,
@@ -44,23 +44,28 @@
 }
 .block-shopping-cart-block .content .view-shopping-cart .view-empty p {
   float: left;
+  padding-left: 5px;
 }
 .block-shopping-cart-block .content .view-shopping-cart .view-empty p,
 .block-shopping-cart-block .content .view-shopping-cart .line-item-quantity {
   display: inline;
+  float: left;
   line-height: 30px;
   margin: 0;
   margin-left: 5px;
+  padding-top: 0px;
+  vertical-align: middle;
 }
 .block-shopping-cart-block .content .view-shopping-cart .line-item-summary {
   display: inline;
-  float: right;
+  float: left;
   height: 34px;
   margin: 0;
+  padding: 0;
   position: relative;
 }
 .block-shopping-cart-block .content .view-shopping-cart .view-empty p {
-  padding-right: 25px;
+  padding-right: 10px;
 }
 .block-shopping-cart-block .content .view-shopping-cart .line-item-summary .line-item-quantity {
   color: #2698F2;
@@ -88,7 +93,7 @@
   height: 100%;
   line-height: 30px;
   margin: 0 0 0 5px;
-  padding: 0 10px;
+  padding: 0 8px;
 }
 .block-shopping-cart-block .content .view-shopping-cart .line-item-summary .links a {
   color: #ffffff;
